Rename source package to ogr2ogr2 to avoid conflicts

--- a/gdal/debian/changelog
+++ b/gdal/debian/changelog
@@ -1,4 +1,4 @@
-gdal2 (2.0.0+svn.27782-precise1) precise; urgency=medium
+ogr2ogr2 (2.0.0+svn.27782-precise1) precise; urgency=medium
 
   * Initial release.
 
