--- a/gdal/debian/changelog
+++ b/gdal/debian/changelog
@@ -1,3 +1,10 @@
+ogr2ogr2 (2.0.0+svn.28306-precise1ubuntu1) precise; urgency=medium
+
+  * Fix for buffer overflow in csv type guessing
+  * New feature: Type guessing on import for GEOJSON
+
+ --  Rafa de la Torre <rtorre@cartodb.com> Mon, 12 Jan 2015 17:22:36 +0000
+
 ogr2ogr2 (2.0.0+svn.27782-precise1) precise; urgency=medium
 
   * Initial release.
